--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app is a test app. It has a simple form where you can create, view and delete articles. 
 
-Things you may want to cover:
+If you would like to run my Rails on Ruby app please do the following:
 
-* Ruby version
+- Get on terminal 
+- Find the Testapp folder
+- Once you're in the Testapp folder, start the Ruby server. (type in: Ruby server)
+- You can stick with the path being on localhost:3000 or chose any other port.
+- Once things are up and running feel free to look at the code, modify or interact with the application.
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+					...................................
+							end
